10559
I've been able to more or less minimize the issue with the following setup:

{code}
if os.path.abspath(git_root).startswith("/Users/xeno_by/Projects/Master"):
  classpath.append("/Users/xeno_by/Projects/specs2/target/scala-2.11.0-M8/specs2_2.11.0-M8-2.4-SNAPSHOT.jar")
  classpath.append("/Users/xeno_by/.ivy2/cache/org.scalaz/scalaz-core_2.11.0-M8/bundles/scalaz-core_2.11.0-M8-7.0.5.jar")
{code}

{code}
class QuickStart extends org.specs2.Specification with org.specs2.specification.Snippets { def is = s2"""
${snippet{
import org.specs2.mutable._
class HelloWorldSpec extends Specification
}}"""^end
}
{code}

{code}
04:08 ~/Projects/Master/sandbox (master)$ s
Test.scala:5: error: not found: type Specification
class HelloWorldSpec extends Specification {
                             ^
one error found
{code}

The error gets shown even though there exists something called org.specs2.mutable.Specification. If I replace `Specification` with `org.specs2.mutable.Specification`, everything works.
